--- a/.env
+++ b/.env
@@ -2,10 +2,12 @@
 VITE_PORT = 3100
 
 #  网站标题
-VITE_GLOB_APP_TITLE = JeecgBoot 企业级低代码平台
+VITE_GLOB_APP_TITLE = 智泰安全管理信息系统
 
 # 简称，用于配置文件名字 不要出现空格、数字开头等特殊字符
-VITE_GLOB_APP_SHORT_NAME = JeecgBootAdmin
+VITE_GLOB_APP_SHORT_NAME = ZT
+
+VITE_GLOB_APP_LOADING_TEXT=信息优化管理，科技铸就安全
 
 # 单点登录服务端地址
 VITE_GLOB_APP_CAS_BASE_URL=http://cas.test.com:8443/cas
